--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,59 @@
 /* You can add global styles to this file, and also import other style files */
+.svgContainer {
+	display: block;
+    margin: auto;
+}
+
+.node {
+	cursor: pointer;
+	fill: #CC0000;
+}
+
+.node-rect {
+	fill: darkgray;
+	
+}
+
+.node-rect:before{
+    content: "";
+    display: block;
+    padding-top: 25%;
+}
+
+.node-rect-closed {
+	stroke-width: 3px;
+	stroke: rgb(241, 240, 240);
+}
+
+.link {
+	fill: none;
+	stroke: rgb(152, 197, 241);
+	stroke-width: 2px;
+}
+
+.linkselected {
+	fill: none;
+	stroke: tomato;
+	stroke-width: 2px;
+}
+
+.link text {
+	font: 7px sans-serif;
+	fill: black;
+}
+
+.wordwrap {
+	white-space: pre-wrap; /* CSS3 */
+	white-space: -moz-pre-wrap; /* Firefox */
+	white-space: -pre-wrap; /* Opera <7 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* IE */
+}
+
+.text {
+	font: 7px sans-serif;
+	fill: black;
+}
+p {
+	display: inline;
+}
