--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-<button (click)="show('dlr')">前序遍历</button>
-<button (click)="show('ldr')">中序遍历</button>
-<button (click)="show('lrd')">后序遍历</button>
-</div>
+<!--<div>-->
+<!--<button (click)="show('dlr')">前序遍历</button>-->
+<!--<button (click)="show('ldr')">中序遍历</button>-->
+<!--<button (click)="show('lrd')">后序遍历</button>-->
+<!--</div>-->
 
-<div>顺序：<span *ngFor='let item of keys,  index as i' [ngClass]= "{'jc': i+1 == count}">{{item}}</span></div>
+<!--<div>顺序：<span *ngFor='let item of keys,  index as i' [ngClass]= "{'jc': i+1 == count}">{{item}}</span></div>-->
 
-<div>
-<button (click)= 'next()'> 下一个</button>
-<button (click)= 'clear()'> 重置</button>
-</div>
+<!--<div>-->
+<!--<button (click)= 'next()'> 下一个</button>-->
+<!--<button (click)= 'clear()'> 重置</button>-->
+<!--</div>-->
 
-<div class="driver-tree" #chart></div>
+<!--<div class="driver-tree" #chart></div>-->
+<app-main></app-main>
